[gd_scene load_steps=2 format=3 uid="uid://bybmn8q8gjo7t"]

[ext_resource type="Script" uid="uid://dgaf4pvqgd7dm" path="res://Scripts/UI/PassiveAbilitiesWindow.gd" id="1_1me3q"]

[node name="PassiveAbilitiesWindow" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1me3q")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.8)

[node name="MainPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -500.0
offset_top = -350.0
offset_right = 500.0
offset_bottom = 350.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MainPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Header" type="HBoxContainer" parent="MainPanel/VBoxContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="MainPanel/VBoxContainer/Header"]
layout_mode = 2
size_flags_horizontal = 3
text = "Управление пассивными способностями"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CloseButton" type="Button" parent="MainPanel/VBoxContainer/Header"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
text = "✕"

[node name="HSeparator" type="HSeparator" parent="MainPanel/VBoxContainer"]
layout_mode = 2

[node name="ControlsPanel" type="HBoxContainer" parent="MainPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="SearchContainer" type="HBoxContainer" parent="MainPanel/VBoxContainer/ControlsPanel"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SearchLabel" type="Label" parent="MainPanel/VBoxContainer/ControlsPanel/SearchContainer"]
layout_mode = 2
text = "Поиск:"

[node name="SearchLineEdit" type="LineEdit" parent="MainPanel/VBoxContainer/ControlsPanel/SearchContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Введите название способности..."

[node name="FilterContainer" type="HBoxContainer" parent="MainPanel/VBoxContainer/ControlsPanel"]
layout_mode = 2

[node name="FilterLabel" type="Label" parent="MainPanel/VBoxContainer/ControlsPanel/FilterContainer"]
layout_mode = 2
text = "Редкость:"

[node name="FilterOptionButton" type="OptionButton" parent="MainPanel/VBoxContainer/ControlsPanel/FilterContainer"]
layout_mode = 2
text = "Все"

[node name="QuickActionsContainer" type="HBoxContainer" parent="MainPanel/VBoxContainer/ControlsPanel"]
layout_mode = 2

[node name="EnableAllButton" type="Button" parent="MainPanel/VBoxContainer/ControlsPanel/QuickActionsContainer"]
custom_minimum_size = Vector2(120, 30)
layout_mode = 2
text = "Включить все"

[node name="DisableAllButton" type="Button" parent="MainPanel/VBoxContainer/ControlsPanel/QuickActionsContainer"]
custom_minimum_size = Vector2(120, 30)
layout_mode = 2
text = "Выключить все"

[node name="HSeparator2" type="HSeparator" parent="MainPanel/VBoxContainer"]
layout_mode = 2

[node name="ContentContainer" type="ScrollContainer" parent="MainPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="AbilitiesGrid" type="GridContainer" parent="MainPanel/VBoxContainer/ContentContainer"]
layout_mode = 2
size_flags_horizontal = 3
columns = 3

[node name="Footer" type="HBoxContainer" parent="MainPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="InfoLabel" type="Label" parent="MainPanel/VBoxContainer/Footer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Активных способностей: 0 из 0"
vertical_alignment = 1

[node name="LearnButton" type="Button" parent="MainPanel/VBoxContainer/Footer"]
custom_minimum_size = Vector2(150, 40)
layout_mode = 2
text = "Изучить способности"

[node name="CloseButton2" type="Button" parent="MainPanel/VBoxContainer/Footer"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
text = "Закрыть"